crates/sui-adapter-transactional-tests/tests/shared/add_dynamic_field.exp
processed 8 tasks

init:
A: object(0,0)

task 1 'publish'. lines 9-35:
Error: warning[W09001]: unused alias
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpIbfhre:12:35
   │
12 │     use sui::dynamic_field::{add, remove};
   │                                   ^^^^^^ Unused 'use' of alias 'remove'. Consider removing it
   │
   = This warning can be suppressed with '#[allow(unused_use)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E01002]: unexpected token
   ┌─ /var/folders/hg/k2qbtbvd7n35hk0sl3mtjlbw0000gn/T/.tmpIbfhre:25:55
   │
25 │     public entry fun add_and_remove_dynamic_field(mut mut obj: Obj) {
   │                                                       ^^^
   │                                                       │
   │                                                       Unexpected 'mut'
   │                                                       Expected an identifier



task 2 'run'. lines 37-37:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 3 'view-object'. lines 39-39:
Error: task 3, lines 39-39. Unbound fake id 2,0

task 4 'run'. lines 41-41:
Error: INVALID TEST. Unknown object, object(2,0)

task 5 'run'. lines 43-43:
Error: Error checking transaction input objects: DependentPackageNotFound { package_id: 0x0000000000000000000000000000000000000000000000000000000000000000 }

task 6 'view-object'. lines 45-45:
Error: task 6, lines 45-45. Unbound fake id 5,0

task 7 'run'. lines 47-47:
Error: INVALID TEST. Unknown object, object(5,0)
